# cslol-manager

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE-CSLOL.md  LeagueIndex.cs  README.md  client_patcher.cpp  config.hpp  def.hpp  def_modoverlay.hpp  file_hook.S  file_hook.asm  game_patcher.cpp  lolcustomskin-tools.sln  macos_elevation_fix  macos_elevation_fix.sh  main.cpp  main_modoverlay.cpp  make-release-mac.sh  make-release-remote.ps1  make-release-remote.sh  make-release.sh  patscanner.hpp  process.hpp  up_hook.S
.github/: FUNDING.yml
LeagueIndex/: LeagueIndex.cs  LeagueIndex.csproj  packages.config
asm/: build.sh  defines.asm  file_hook.asm  up_hook.asm
cslol-tools/: CMakeLists.txt  README.md
cslol-tools/dep/: CMakeLists.txt
cslol-tools/dll/: main.c
cslol-tools/lib/lol/: common.cpp  common.hpp  error.cpp  error.hpp  fs.cpp  fs.hpp  log.cpp  log.hpp
cslol-tools/lib/lol/hash/: dict.cpp  dict.hpp  fnv1a32.cpp  fnv1a32.hpp  xxh64.cpp  xxh64.hpp
cslol-tools/lib/lol/io/: buffer.cpp  buffer.hpp  bytes.cpp  bytes.hpp  file.cpp  file.hpp  sys.cpp  sys.hpp
cslol-tools/lib/lol/patcher/: patcher.hpp  patcher_dummy.cpp  patcher_macos.cpp  patcher_macos_amd64.cpp  patcher_macos_arm64.cpp  patcher_new_win32.cpp  patcher_win32.cpp
cslol-tools/lib/lol/patcher/asm/: build.sh  defines.asm  file_hook.asm  ret_hook.asm  up_hook.asm  win32_hook_CRYPTO_free.asm  win32_hook_CreateFileA.asm
cslol-tools/lib/lol/patcher/utility/: delay.hpp  lineconfig.hpp  macho.hpp  peex.hpp  ppp.hpp  process.hpp  process_macos.cpp  process_win32.cpp
cslol-tools/lib/lol/utility/: cli.cpp  cli.hpp  magic.cpp  magic.hpp  sha256.cpp  sha256.hpp  zip.cpp  zip.hpp
cslol-tools/lib/lol/wad/: archive.cpp  archive.hpp  entry.cpp  entry.hpp  index.cpp  index.hpp  mounted.cpp  mounted.hpp  toc.cpp  toc.hpp
cslol-tools/res/: utf8.manifest
cslol-tools/src/: main_diag.cpp  main_mod_tools.cpp  main_wad_extract.cpp  main_wad_extract_all.cpp  main_wad_make.cpp
dep/zlib/: CMakeLists.txt
dep/zstd/: CMakeLists.txt
docs/: mod-tools.md
lcs-lib/: CMakeLists.txt  README.md
lcs-lib/dep/json/: CMakeLists.txt
lcs-lib/dep/miniz/: CMakeLists.txt
lcs-lib/dep/picosha2/: CMakeLists.txt
lcs-lib/dep/xxhash/: CMakeLists.txt
lcs-lib/dep/zstd/: CMakeLists.txt
lcs-lib/src/lcs/: HashTable.hpp  common.cpp  common.hpp  conflict.cpp  conflict.hpp  error.cpp  error.hpp  hashtable.cpp  iofile.cpp  iofile.hpp  mod.cpp  mod.hpp  modindex.cpp  modindex.hpp  modunzip.cpp  modunzip.hpp  progress.cpp  progress.hpp  string.cpp  string.hpp  utility.cpp  utility.hpp  wad.cpp  wad.hpp  wadindex.cpp  wadindex.hpp  wadindexcache.cpp  wadindexcache.hpp  wadmake.cpp  wadmake.hpp  wadmakequeue.cpp  wadmakequeue.hpp  wadmerge.cpp  wadmerge.hpp  wadmergequeue.cpp  wadmergequeue.hpp  wxyextract.cpp  wxyextract.hpp
lcs-manager/: CMakeLists.txt
lcs-manager/lolcustomskin/: .gitignore  CMakeLists.txt  README.md
lcs-manager/lolcustomskin/asm/: defines.asm  file_hook.asm
lcs-manager/lolcustomskin/src/: main.cpp  modoverlay.cpp  modoverlay.hpp  process.cpp
lcs-manager/lolcustomskin/src/lcs/: modoverlay.cpp  modoverlay.hpp  process.cpp
lcs-manager/qml/: LCSDialogErrorUser.qml  LCSDialogLog.qml  LCSDialogNewModRAWFolder.qml  LCSDialogNewModWadFiles.qml  LCSDialogSaveZipFantome.qml  LCSDialogUpdate.qml  LCSModInfoEdit.qml  LCSModsView.qml  main.qml
lcs-manager/res/: icon.icns
lcs-manager/src/: LCSTools.cpp  LCSTools.h  LCSToolsImpl.cpp  LCSToolsImpl.h  LCSUtils.cpp  LCSUtils.h  main.cpp
lcs-manager/src/qml/: LCSDialogEditMod.qml  LCSDialogError.qml  LCSDialogErrorUser.qml  LCSDialogGame.qml  LCSDialogLoLPath.qml  LCSDialogLog.qml  LCSDialogNewMod.qml  LCSDialogNewModImage.qml  LCSDialogNewModRAWFolder.qml  LCSDialogNewModWadFiles.qml  LCSDialogNewProfile.qml  LCSDialogOpenZipFantome.qml  LCSDialogSaveZipFantome.qml  LCSDialogSettings.qml  LCSDialogUpdate.qml  LCSDialogWarning.qml  LCSLogView.qml  LCSModInfoEdit.qml  LCSModsView.qml  LCSSideMenu.qml  LCSStatusBar.qml  LCSToolBar.qml  PageMods.qml  PageSettings.qml  main.qml  qml.qrc
lcs-patcher/: CMakeLists.txt
lcs-patcher/asm/: build.sh  file_hook.asm  macos_hook.asm
lcs-patcher/src/: main.cpp
lcs-patcher/src/lcs/: macho.hpp  modoverlay.hpp  modoverlay_common.cpp  modoverlay_dummy.cpp  modoverlay_macos.cpp  modoverlay_win32.cpp  process.hpp  process_macos.cpp  process_win32.cpp
lcs-patcher/src/lcs/macos/: process.hpp
lcs-patcher/src/lcs/patcher_utility/: lineconfig.hpp  macho.hpp  ppp.hpp  process.hpp  process_macos.cpp  process_win32.cpp
lcs-wadextract/: CMakeLists.txt  main.cpp
lcs-wadmake/: CMakeLists.txt  main.cpp
lcs-wxyextract/: CMakeLists.txt  main.cpp
lolcustomskin-gui/: CMakeLists.txt
lolcustomskin-lib/: CMakeLists.txt
lolcustomskin-lib/dep/miniz/: CMakeLists.txt
lolcustomskin-lib/dep/zstd/: CMakeLists.txt
lolcustomskin-lib/src/lcs/: HashTable.cpp  common.cpp  modindex.hpp  modunzip.cpp  wad.cpp  wadindexcache.hpp  wadmake.cpp  wadmake.hpp  wadmerge.hpp  wxyextract.cpp  wxyextract.hpp
lolcustomskin-manager/: CMakeLists.txt
lolcustomskin-wadextract/: CMakeLists.txt  main.cpp
lolcustomskin-wadmake/: CMakeLists.txt
lolcustomskin-wxyextract/: CMakeLists.txt  main.cpp
modadd/: Program.cs  main.cpp  modadd.csproj
modapply/: Program.cs  main.cpp  modapply.csproj
qml/: HomeForm.ui.qml  LCSDialogError.qml  LCSDialogLoLPath.qml  LCSDialogLog.qml  LCSDialogNewModImage.qml  LCSDialogNewModWadFiles.qml  LCSDialogNewProfile.qml  LCSDialogProgress.qml  LCSDialogSaveZipFantome.qml  LCSModsView.qml  LCSStatusBar.qml  LCSToolBar.qml  PageSettings.qml  main.qml  qml.qrc
src/: CSLOLSystemTrayManager.cpp  CSLOLSystemTrayManager.h  CSLOLTools.cpp  CSLOLTools.h  CSLOLToolsImpl.cpp  CSLOLToolsImpl.h  CSLOLUtils.cpp  CSLOLUtils.h  CSLOLVersion.h  LCSTools.cpp  LCSTools.h  LCSToolsImpl.cpp  LCSToolsImpl.h  SystemTrayManager.cpp  SystemTrayManager.h  main.cpp  main_elevate.c  modoverlay.cpp  modoverlay.hpp  modoverlay_main.cpp  modoverlay_shellcode.cpp  patscanner.hpp  process.cpp  process.hpp  process_win32.cpp
(+115 files in other folders)
